--- a/style.css
+++ b/style.css
@@ -9,24 +9,26 @@ body {
   }
   
   .page {
-    width: 600px;
+    width: 1000px;
     margin: 0 auto;
     padding-top: 65px;
   }
   
   nav {
     display: flex;
-    justify-content: start;
-    align-items: center;
-  
-    margin-bottom: 15px;
+    justify-content: space-between;
+    align-items: center;      
+    margin: 0 13px 58px 0 ;
   }
   
   ul {
-    display: flex;
     list-style: none;
+    
+    display: flex;
     margin: 0;
     padding: 0;
+
+    gap:48px  ;
   }
   
   a {
@@ -36,6 +38,7 @@ body {
   
   ul li a {
       opacity: 0.5;
+      transition: 0.6s;
   }
   
   ul li a:hover {
@@ -46,6 +49,12 @@ body {
   h1,
   ul {
     font-family: "Mulish", sans-serif;
+  }
+
+  main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
   h1 {
@@ -67,6 +76,8 @@ body {
     font-size: 14px;
     line-height: 28px;
     color: #7d7987;
+
+    width: 381px;
   
     margin: 40px 0;
   }
@@ -77,15 +88,18 @@ body {
   
     background: #69B99D;
     border: 0;
-    padding: 0 50px 30px;
+    padding: 14px 32px 15px 32px;
   
     display: flex;
     justify-content: space-around;
-    gap: 50px;
+    align-items: center;
+    gap: 10px;
   
     border-radius: 4px;
   
     cursor: pointer;
+
+    transition: 0.6s;
   }
   
   button:hover {
@@ -98,15 +112,20 @@ body {
   
     text-align: center;
   
-    margin-top: 80px;
+    margin-top: 82px;
   }
   
   footer a {
     font-weight: bold;
+    transition: 0.6s; 
+  }
+  footer a:hover{
+    color: #3f2b69;
   }
   
   #balls {
-      bottom: 0;
-      right: 0;
+  position: fixed;
+  right: 0;
+  bottom: 0;
   }
   
